# pytest_tutorial

./: README.md  conftest.py  pyproject.toml
tests/: test_example.py
